--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ html, .fullscreen {
 /* slider bar */
 .slider {
   -webkit-appearance: none;
-  width: 90%;
+  width: 80%;
   height: 15px;
   border-radius: 5px;   
   background: #ECCBAF;
@@ -193,3 +193,24 @@ html, .fullscreen {
   position:relative;
   top:1px;
 }
+
+#outputDiv{
+  background: white;
+  border: 2px solid #C18C5D;
+  border-radius: 4px;
+  font-size: 12pt;
+  padding: 10px 10px;
+  color: black;
+  width: 400px;
+  text-align:center;
+  margin:auto;
+}
+
+.b{
+  background: green;
+  color:blue;
+}
+
+
+
+
