--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 
 #logo{
   display: flex-inline;
-  max-height: 250px; 
+  max-height: 400px; 
 }
 
 /*Make content area fill the entire browser window */
@@ -32,11 +32,12 @@ html, .fullscreen {
 #name, #date{
   border: 2px solid #C18C5D;
   border-radius: 4px;
-  font-size: 12pt;
+  font-size: 30pt;
   padding: 10px 10px;
   margin: 8px 5;
   color: white;
-  width: 200px;
+  height: 50px;
+  width: 400px;
 }
 
 .workoutContainer{
@@ -45,7 +46,7 @@ html, .fullscreen {
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 20px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -64,10 +65,11 @@ html, .fullscreen {
 
 .checkmark {
   position: absolute;
-  top: 0;
+  top: 10;
   left: 0;
-  height: 25px;
-  width: 25px;
+  right: 10;
+  height: 50px;
+  width: 50px;
   background-color: #eee;
 }
 
@@ -90,10 +92,10 @@ html, .fullscreen {
 }
 
 .workoutContainer .checkmark:after {
-  left: 9px;
-  top: 5px;
-  width: 5px;
-  height: 10px;
+  left: 17px;
+  top: 15px;
+  width: 10px;
+  height: 20px;
   border: solid white;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
@@ -103,6 +105,11 @@ html, .fullscreen {
 
 #z1, #z2, #z3, #other, #workoutP, #OverallWP, #OverallMP, #checkP, #soreness, #fatigue, #stressed, #injury, #otherP, #dehydration, #tightness, #tired{
   color: white;
+  font-size:30pt;
+  margin:25px;
+}
+#soreness, #fatigue, #stressed, #injury, #otherP, #dehydration, #tightness, #tired{
+  font-size: 15pt !important;
 }
 
 #z1num, #z2num, #z3num, #otherTextbox{
@@ -110,35 +117,37 @@ html, .fullscreen {
     border-radius: 4px;
     font-size: 12pt;
     padding: 10px 10px;
+    margin-bottom: 50px;
     margin: 10px 10px;
     color: white;
-    width: 50px;
+    width: 100px;
+    height: 45px;
 }
 
 #otherTextbox{
-  width: 200px;
+  width: 300px;
 }
 
 /* slider bar */
 .slider {
   -webkit-appearance: none;
-  width: 80%;
-  height: 15px;
-  border-radius: 5px;   
+  width: 90%;
+  height: 30px;
+  border-radius: 20px;   
   background: #ECCBAF;
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
   transition: opacity .2s;
-  margin: 10px;
+  margin: 30px;
 }
 
 /* slider knob */
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 25px;
-  height: 25px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%; 
   background: #E7AD99;
   cursor: pointer;
@@ -164,8 +173,8 @@ html, .fullscreen {
   padding: 10px 10px;
   margin: 8px 5;
   color: white;
-  width: 400px;
-  height: 100px;
+  width: 800px;
+  height: 200px;
 }
 
 #submit, #email{
@@ -176,7 +185,7 @@ html, .fullscreen {
   cursor:pointer;
   color:#ffffff;
   font-family:Courier New;
-  font-size:15px;
+  font-size:50px;
   font-weight:bold;
   padding:12px 25px;
   text-decoration:none;
@@ -198,10 +207,10 @@ html, .fullscreen {
   background: white;
   border: 2px solid #C18C5D;
   border-radius: 4px;
-  font-size: 12pt;
+  font-size: 20pt;
   padding: 10px 10px;
   color: black;
-  width: 400px;
+  width: 800px;
   text-align:center;
   margin:auto;
 }
