--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,41 @@ html, .fullscreen {
   height: 200px;
 }
 
-#submit, #email{
+#submit{
+  background-color:#CE796B;
+  border-radius:42px;
+  border:2px solid #E6AD99;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Courier New;
+  font-size:40pt;
+  font-weight:bold;
+  padding:12px 25px;
+  text-decoration:none;
+  text-shadow:0px 0px 0px #ce786b;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+#email{
+  background-color:#CE796B;
+  border-radius:42px;
+  border:2px solid #E6AD99;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Courier New;
+  font-size:40pt;
+  font-weight:bold;
+  padding:12px 25px;
+  text-decoration:none;
+  text-shadow:0px 0px 0px #ce786b;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+#copy{
   background-color:#CE796B;
   border-radius:42px;
   border:2px solid #E6AD99;
